# client-app

./: .gitignore  APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_WITH_NIX.md  Develop.md  LICENSE  MOFA_DORA_ARCHITECTURE.md  MOFA_DORA_INTEGRATION_PLAN.md  README.md  build_check.txt  build_output.txt  convert_svg.js  convert_svg_to_png.py  fix_remaining_references.py  fix_scene_center.py  flake.nix  mofa-studio-dora-integration-checklist.md  mofa-studio-roadmap.claude  mofa-studio-roadmap.m2  refactor_scenes_to_screens.py  setup-english-learning.ps1  task.md  架构指南.md
apps/colang/: Cargo.toml  QUICKSTART.md  ai.md  经历.md
apps/colang/dataflow/: techer.toml
apps/colang/migrations/: 001_create_tables.sql
apps/colang/src/: audio.rs  audio_player.rs  database.rs  dora_integration.rs  doubao_api.rs  lib.rs  mofa_hero.rs  screen.rs
apps/colang/src/screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs
apps/mofa-fm/: Cargo.toml
apps/mofa-fm/dataflow/: voice-chat.yml
apps/mofa-fm/src/: audio.rs  audio_player.rs  dora_integration.rs  lib.rs  log_bridge.rs  mofa_hero.rs
apps/mofa-fm/src/screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs  mod.rs
apps/mofa-settings/: Cargo.toml
apps/mofa-settings/src/: lib.rs  provider_view.rs  screen.rs
apps/mofa-settings/src/data/: preferences.rs
apps/settings/: Cargo.toml
apps/settings/src/: add_provider_modal.rs  general_panel.rs  lib.rs  provider_view.rs  providers_panel.rs  screen.rs
apps/settings/src/data/: mod.rs  preferences.rs  providers.rs
core/: Cargo.toml  QUICKSTART.md
core/data/: init-database.ps1  learning_companion.db  seed_data.sql
core/dataflows/dialog/: english_teacher_config.toml  learning-graph.html  learning.yml  maas_config.toml
core/migrations/: 002_enhanced_features.sql
core/src/: asset_api.rs  audio.rs  audio_player.rs  db.rs  dict_api.rs  dora_integration.rs  doubao_api.rs  learn_api.rs  learning_api.rs  lib.rs  log_bridge.rs  models.rs  routes.rs  scenes.rs  screens.rs  ui_path.rs
core/src/models/: preferences.rs
core/src/scenes/: dialog.rs  home.rs  mod.rs  review.rs  scene_center.rs  settings.rs
core/src/scenes/dialog/: audio_player.rs  dialog_scene.rs  dora_handlers.rs  mofa_hero.rs  screen.rs
core/src/scenes/dialog/dialog_scene/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs
core/src/scenes/dialog/screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs
core/src/scenes/home/: screen.rs
core/src/scenes/mofa-fm/: mod.rs
core/src/scenes/mofa-fm/screen/: chat_panel.rs  mod.rs
core/src/scenes/review/: components.rs  due_screen.rs  mastered_screen.rs  mistakes_screen.rs  review_scene.rs  stats_screen.rs
core/src/scenes/settings/: about_panel.rs  add_provider_modal.rs  audio_panel.rs  general_panel.rs  provider_view.rs  providers_panel.rs  screen.rs  settings_scene.rs
core/src/screens/: chat.rs  conversation.rs  dialog.rs  dictionary.rs  home.rs  review.rs  scene_center.rs  scenes.rs  settings.rs
core/src/screens/assistant/: assistant_screen.rs  mod.rs
core/src/screens/chat/: chat_screen.rs
core/src/screens/chat/chat_screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs
core/src/screens/classic_dialogues/: classic_dialogues_screen.rs  mod.rs
core/src/screens/conversation/: conversation_screen.rs  mofa_hero.rs
core/src/screens/conversation/conversation_screen/: audio_controls.rs  chat_panel.rs  dora_handlers.rs  log_panel.rs
core/src/screens/dialog/: mofa_hero.rs
core/src/screens/dialog/dialog_screen/: dora_handlers.rs  log_panel.rs  mod.rs
core/src/screens/dictionary/: dictionary_screen.rs
core/src/screens/home/: home_screen.rs
core/src/screens/reading/: mod.rs  reading_screen.rs
core/src/screens/review/: components.rs  due_screen.rs  mastered_screen.rs  mistakes_screen.rs  review_screen.rs  stats_screen.rs
core/src/screens/scene_center/: scene_center_screen.rs
core/src/screens/scenes/: scenes_screen.rs
core/src/screens/settings/: about_panel.rs  add_provider_modal.rs  audio_panel.rs  general_panel.rs  provider_view.rs  providers_panel.rs  release_notes_modal.rs  settings_screen.rs
design/: README.md  方案10.md  方案5.md  方案6.md  方案7.md
dora-bridge/: Cargo.toml
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs
mofa-studio-shell/src/widgets/: mod.rs  mofa_hero.rs  sidebar.rs
rust-nodes/dora-bigmodel-asr/: Cargo.toml
rust-nodes/dora-bigmodel-asr/src/: main.rs
rust-nodes/dora-bigmodel-tts/: Cargo.toml
rust-nodes/dora-bigmodel-tts/src/: main.rs
rust-nodes/dora-conference-bridge/: API.md  Cargo.toml  README.md
rust-nodes/dora-conference-bridge/src/: main.rs
rust-nodes/dora-conference-controller/: Cargo.toml
rust-nodes/dora-conference-controller/dora-conference-bridge/: CONTROLS.md
rust-nodes/dora-conference-controller/src/: main.rs
rust-nodes/dora-conference-controller/src/policies/: unified_ratio.rs
rust-nodes/dora-conference-controller/src/policies/tests/: unified_ratio_test.rs
rust-nodes/dora-doubao-asr/: Cargo.toml
rust-nodes/dora-doubao-asr/src/: main.rs
rust-nodes/dora-doubao-tts/: Cargo.toml
rust-nodes/dora-doubao-tts/src/: main.rs
rust-nodes/dora-english-teacher/: Cargo.toml
rust-nodes/dora-english-teacher/src/: main.rs
rust-nodes/dora-learning-db-reader/: Cargo.toml
rust-nodes/dora-learning-db-reader/src/: main.rs
rust-nodes/dora-learning-db-writer/: Cargo.toml
rust-nodes/dora-learning-db-writer/src/: main.rs
rust-nodes/dora-maas-client/: API.md  Cargo.toml  IMPLEMENTATION_SUMMARY_REVERTED.md  README.md
rust-nodes/dora-maas-client/examples/: test_manual_sse.rs
rust-nodes/dora-maas-client/src/: client.rs  config.rs  main.rs  segmenter.rs  streaming.rs  tool.rs
shell/: Cargo.toml
shell/src/: app.rs  config.rs  lib.rs  main.rs
shell/src/widgets/: main_body.rs  mod.rs  mofa_hero.rs  sidebar.rs  tabs.rs
studio-shell/: Cargo.toml
studio-shell/src/: app.rs  lib.rs  main.rs
studio-shell/src/widgets/: sidebar.rs
widgets/: Cargo.toml
(+125 files in other folders)
