[workspace]
resolver = "3"
members = ["shell", "widgets", "dora-bridge", "core", "rust-nodes/*"]
exclude = []

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92.0"

[workspace.dependencies]
colang-core = { path = "core" }
dora-bridge = { path = "dora-bridge" }
widgets = { path = "widgets" }

# Makepad UI framework
makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "b8b65f4fa" }

# Audio
cpal = "0.15"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Utilities
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
sysinfo = "0.32"
crossbeam-channel = "0.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
eyre = "0.6"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
futures = "0.3"
bytes = "1.0"
async-trait = "0.1"
figment = { version = "0.10.0", features = ["env", "json", "toml", "yaml"] }
reqwest-eventsource = "0.6.0"
tokio-stream = "0.1"
tokio-util = "0.7"
minimp3 = "0.5"
rfd = "0.15"
webbrowser = "0.8"

# External git dependencies
outfox-openai = { version = "0.2.0", git = "https://github.com/outfox-ai/outfox.git" }
rmcp = { version = "0.3.2", git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "fbc7ab7", features = [
    "client",
    "transport-child-process",
    "transport-sse-client",
    "transport-streamable-http-client",
    "reqwest",
] }

# Dora - robotics framework for voice chat architecture
dora-node-api = { version = "0.4.0" }
dora-core = { version = "0.4.0" }
# dora-node-api = { git = "https://github.com/dora-rs/dora.git", tag = "v0.3.12" }
# dora-node-api = { path = "../../dora-rs/dora/apis/rust/node" }
