[package]
name = "colang-core"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
makepad-component.workspace = true
widgets.workspace = true
dora-bridge.workspace = true
parking_lot.workspace = true
log.workspace = true
sysinfo.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
serde_json.workspace = true
once_cell.workspace = true

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

# HTTP client for Doubao APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Async
async-trait = "0.1"
futures = "0.3"

# UUID for session IDs
uuid = { workspace = true, features = ["v4", "serde"] }

# Base64 encoding
base64.workspace = true

# URL encoding
urlencoding.workspace = true

# Directory utilities
dirs.workspace = true

# File dialog
rfd.workspace = true
