[package]
name = "colang-shell"
version.workspace = true
edition.workspace = true

[features]
default = []

[dependencies]
makepad-widgets.workspace = true
widgets.workspace = true
colang-core.workspace = true

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
webbrowser.workspace = true
sysinfo = "0.32"
ctrlc = "3.4"

[[bin]]
name = "colang"
path = "src/main.rs"
