[package]
name = "studio-shell"
version.workspace = true
edition.workspace = true

[features]
default = ["mofa-fm", "colang", "settings", "home"]
mofa-fm = ["dep:mofa-fm"]
colang = ["dep:colang"]
settings = ["dep:settings"]
home = ["dep:home"]

[dependencies]
makepad-widgets.workspace = true
widgets = { path = "../widgets" }
mofa-fm = { path = "../apps/mofa-fm", optional = true }
colang = { path = "../apps/colang", optional = true }
settings = { path = "../apps/settings", optional = true }
home = { path = "../apps/home", optional = true }

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
sysinfo = "0.32"
ctrlc = "3.4"

[[bin]]
name = "mofa-studio"
path = "src/main.rs"
