[package]
name = "colang"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
dora-bridge = { path = "../../dora-bridge" }
settings = { path = "../settings" }
parking_lot.workspace = true
log.workspace = true
sysinfo.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
serde_json.workspace = true
once_cell = "1.19"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }

# HTTP client for Doubao APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Async
async-trait = "0.1"
futures = "0.3"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.22"
