[package]
name = "mofa-fm"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
widgets = { path = "../../widgets" }
dora-bridge = { path = "../../dora-bridge" }
settings = { path = "../settings" }
parking_lot.workspace = true
log.workspace = true
sysinfo.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
serde_json.workspace = true
once_cell = "1.19"
