[package]
name = "mofa-settings"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
log.workspace = true
