[package]
name = "settings"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
widgets = { path = "../../widgets" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
log.workspace = true
rfd.workspace = true
cpal.workspace = true
