[package]
name = "dora-bigmodel-asr"
version.workspace = true
edition.workspace = true
description = "Dora node for BigModel GLM-ASR (speech-to-text) using ZhipuAI API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
base64.workspace = true
