[package]
name = "dora-bigmodel-tts"
version.workspace = true
edition.workspace = true
description = "Dora node for BigModel GLM-TTS (text-to-speech) using ZhipuAI API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
