[package]
name = "dora-conference-controller"
version.workspace = true
edition.workspace = true
rust-version = "1.75.0"

[lib]
name = "dora_conference_controller"
path = "src/lib.rs"

[[bin]]
name = "dora-conference-controller"
path = "src/main.rs"

[dependencies]
dora-node-api.workspace = true
dora-core.workspace = true
eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
