[package]
name = "dora-doubao-asr"
version.workspace = true
edition.workspace = true
description = "Dora node for Doubao ASR (speech-to-text) using Volcanic Engine API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
