[package]
name = "dora-doubao-tts"
version.workspace = true
edition.workspace = true
description = "Dora node for Doubao TTS (text-to-speech) using Volcanic Engine API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
minimp3.workspace = true
