[package]
name = "dora-doubao-tts"
version.workspace = true
edition.workspace = true
description = "Dora node for Doubao TTS (text-to-speech) using Volcanic Engine API"

[dependencies]
dora-node-api.workspace = true
eyre.workspace = true
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
log.workspace = true
env_logger.workspace = true
uuid = { workspace = true, features = ["v4"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
futures-util.workspace = true
minimp3.workspace = true
